--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.7.0",
     "lucide-react": "^0.562.0",
+    "mongodb": "^7.0.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "twikoo": "^1.6.44"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
